# firefly-sync

./: .gitignore  LICENSE  README.md  experiment_1.ipynb  pyproject.toml
experiments/: experiment_2.ipynb
fireflies/: __init__.py  engines.py  experiment.py  graph.py  models.py  network.py  utils.py
lib/: experiment.py  fireflies.py  flash_parameters.py
lib/firefly/: firefly.py
test/: fireflies_test.py
tests/: fireflies_test.py  network_test.py
