[project]
name = "fireflies"
version = "0.1.0"
description = ""
authors = [
    { name = "George (Gosha) Ginzburg", email = "ginzburggeorgy@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib (>=3.10.1,<4.0.0)",
    "numpy (>=2.2.4, <3.0.0)",
    "networkx (>=3.4.2, <4.0.0)",
    "notebook (>=7.4.2,<8.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
